# easygl

./: .gitignore  CMakeLists.txt  README.md  USAGE.md
examples/: CMakeLists.txt  c0.comp  c1.comp  df.frag  dv.vert  init.comp  main.cpp
examples/emfield/: CMakeLists.txt  main.cpp
examples/emfield/res/sdr/: c1.comp
include/: easygl.h
res/sdr/: c0.comp  df.frag  dv.vert  init.comp
src/: main.cpp
test/: CMakeLists.txt  main.cpp
